# cellclassifier

./: .gitignore  README.md  pyproject.toml
model_output/results/: binary_classification_rf_results.csv  combined_results.csv  fine_tuning_log.txt  gbdt_results.csv  random_forest_results.csv
scripts/: binary_rf.py  finetune_geneformer.py  multiclass_baselines.py  plot_comparison.py  reading_data.py
